# WebAssemblyPractice

./: .gitignore
display_picture/: Cargo.toml  index.html  package-lock.json  package.json  なぜfsがimportできないのか.txt  手順.txt
display_picture/src/: QuizProvider.rs  Result.rs  answer.rs  html_manipulator.rs  lib.rs  log.js  questions.json  quiz.js  quiz_provider.rs
display_picture/static/: index.html
