[package]
name = "display_picture"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"
console_error_panic_hook="0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"

[dependencies.web-sys]
version = "0.3.57"
features = [
  'Window',
  'Document',
  'Element',
  'HtmlElement',
  'Event',
  'HtmlImageElement',
  'console',
  'NodeList',
]

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"