[package]
name = "display_picture"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"
js-sys = "0.3"
console_error_panic_hook="0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
wasm-bindgen-futures = "0.4.5"
once_cell = "1.17"
serde-wasm-bindgen = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.57"
features = [
  'Window',
  'Document',
  'Element',
  'HtmlElement',
  'Event',
  'HtmlImageElement',
  'console',
  'NodeList',
  "MouseEvent",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"